Fixed bug in link alignment when browsing in  Firefox

--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -51,6 +51,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+  align-items: center;
   a {
     color: white;
     text-decoration: none;
